# province-official-bio-pipeline

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  api_processor_v2.py  battle_generator.py  build_panel.py  config.py  diff.py  export.py  export_v2.py  extraction.py  failures.py  input_parser.py  judge.py  main.py  main_province.py  merged_builder.py  postprocess.py  postprocess_v2.py  pyproject.toml  requirements.txt  text_preprocessor.py  utils.py  verifier_v2.py
.claude/: launch.json  settings.local.json
Slides/: slides_pipeline.tex
archive/: api_processor.py  bio-extraction-step1.md  bio-extraction_v1.md  bio-labeling.md  bio-verification_v1.md  bio_scraper.py  export.py  fetch_bio_from_llm.py  list_scraper.py  main.py  main_v2.py  postprocess.py  v2-改造方案.md  verifier.py  技术文档.md  技术文档_v2.md  技术文档_v3.md
code_scrape/: __init__.py  bio_scraper_v2.py  fix_all_secretaries.py  fix_secretaries.py  fix_secretaries_v2.py  generate_province_lists.py  input_parser_province.py  merge_starmap_results.py  smart_merge_secretaries.py  starmap_scraper.py  supplement_secretaries.py  wiki_secretary_scraper.py  wiki_secretary_v2.py  wiki_secretary_v3.py  wiki_secretary_verify.py
data/: test5_officials.txt  上海_officials.txt  云南_officials.txt  内蒙古_officials.txt  北京_officials.txt  吉林_officials.txt  四川_officials.txt  天津_officials.txt  宁夏_officials.txt  安徽_officials.txt  山东_officials.txt  山西_officials.txt  广东_officials.txt  广西_officials.txt  新疆_officials.txt  江苏_officials.txt  江西_officials.txt  河北_officials.txt  河南_officials.txt  浙江_officials.txt  海南_officials.txt  (+11 more)
(+767 files in other folders)
