[project]
name = "province-official-db"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "curl-cffi>=0.5.0",
    "json-repair>=0.58.7",
    "lxml>=4.9.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
